Unspecified ALIFE Dates
Unspecified ALIFE Dates

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -9628,7 +9628,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:17:51Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9727,11 +9727,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ltDh4/hIOYvu
-								WlwnlsgsYA==
+								fzyivnpB1Isb
+								SBm46sDtPw==
 								</data>
 								<key>Size</key>
-								<integer>145929</integer>
+								<integer>146012</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
@@ -9747,11 +9747,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/E5hdvOp2wPs
-								xll3ogor1g==
+								53n5m9BBJdTd
+								eDIsXI3C6A==
 								</data>
 								<key>Size</key>
-								<integer>79957</integer>
+								<integer>79880</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9764,7 +9764,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9833,11 +9833,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CJq8MdjxAhKe
-								SUjIQh3UoA==
+								5uvjFiljSdlX
+								3NRvUUOw4Q==
 								</data>
 								<key>Size</key>
-								<integer>150234</integer>
+								<integer>150317</integer>
 							</dict>
 							<key>files/stacks_page_page65.js</key>
 							<dict>
@@ -9853,11 +9853,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JuCotocVquYp
-								sW2rK5K0hA==
+								wApYTBqSqqxh
+								zbdTODgblw==
 								</data>
 								<key>Size</key>
-								<integer>66746</integer>
+								<integer>66662</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11072,7 +11072,7 @@
 					<key>page72 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11131,8 +11131,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G5796rEayNF2
-								rqP6wvfApw==
+								ApAmNLiFtbVm
+								jDX7VJ/jog==
 								</data>
 								<key>Size</key>
 								<integer>114894</integer>
@@ -11151,11 +11151,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZAyDpFekz8+5
-								Y7452WVpmQ==
+								1k6kl7exLcEZ
+								l6Jf48tOQw==
 								</data>
 								<key>Size</key>
-								<integer>46669</integer>
+								<integer>46524</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11340,7 +11340,7 @@
 					<key>page75 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11409,8 +11409,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bTexVoE0NXiQ
-								D5iDhUwzRQ==
+								txyM5HIpHvwH
+								LBFmHAfX2g==
 								</data>
 								<key>Size</key>
 								<integer>135426</integer>
@@ -11429,11 +11429,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qSZ5Io+u8Xpy
-								axAjJr6iUQ==
+								atWD2khn3HAM
+								q+WSLY2nrw==
 								</data>
 								<key>Size</key>
-								<integer>59019</integer>
+								<integer>58874</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11532,7 +11532,7 @@
 					<key>page77 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11581,8 +11581,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Rs+6NxIAkpgO
-								4T0NE5n6ZA==
+								wYslc6YZZu39
+								TsvD/S1Xuw==
 								</data>
 								<key>Size</key>
 								<integer>122009</integer>
@@ -11601,11 +11601,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ztPjOS+kDRtZ
-								ve7gCMDsKg==
+								AU8StwuVrSJP
+								D2oDLu7nlQ==
 								</data>
 								<key>Size</key>
-								<integer>49911</integer>
+								<integer>49766</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11618,7 +11618,7 @@
 					<key>page78 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11667,8 +11667,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iRgNPb0XEF34
-								AQJQvHNo0Q==
+								hALOLYJdbiJG
+								XmQG1HCdaQ==
 								</data>
 								<key>Size</key>
 								<integer>113934</integer>
@@ -11687,11 +11687,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ezbpbeZNzJaI
-								Y8urUYd0Zg==
+								C858xwSNGv0x
+								lFiaQtAXzg==
 								</data>
 								<key>Size</key>
-								<integer>47384</integer>
+								<integer>47239</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11704,7 +11704,7 @@
 					<key>page79 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11793,8 +11793,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DFkF9QKmTzBj
-								JMULZwleJw==
+								LYe/IYOTN2Eu
+								FrinkVAEpg==
 								</data>
 								<key>Size</key>
 								<integer>137845</integer>
@@ -11813,11 +11813,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/pbOA38DAXBv
-								NcgH1MPyZA==
+								rniFVQbWmxfo
+								AO+90RCgtA==
 								</data>
 								<key>Size</key>
-								<integer>67338</integer>
+								<integer>67193</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12124,7 +12124,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:17:51Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13163,11 +13163,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								S7YKRS8qQGV/
-								Hnf9klAjwA==
+								5UYGaJ6LIz9p
+								jpxHMiuGxQ==
 								</data>
 								<key>Size</key>
-								<integer>3446</integer>
+								<integer>3705</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13251,7 +13251,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HA/SNw1D+agAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HA/c3IdgP3gAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -13262,7 +13262,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD9I3DURQKA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD9zch2De2A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
