--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CJq8MdjxAhKe
-								SUjIQh3UoA==
+								5uvjFiljSdlX
+								3NRvUUOw4Q==
 								</data>
 								<key>Size</key>
-								<integer>150234</integer>
+								<integer>150317</integer>
 							</dict>
 							<key>files/stacks_page_page65.js</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JuCotocVquYp
-								sW2rK5K0hA==
+								wApYTBqSqqxh
+								zbdTODgblw==
 								</data>
 								<key>Size</key>
-								<integer>66746</integer>
+								<integer>66662</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
