--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,8 +104,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bTexVoE0NXiQ
-								D5iDhUwzRQ==
+								txyM5HIpHvwH
+								LBFmHAfX2g==
 								</data>
 								<key>Size</key>
 								<integer>135426</integer>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qSZ5Io+u8Xpy
-								axAjJr6iUQ==
+								atWD2khn3HAM
+								q+WSLY2nrw==
 								</data>
 								<key>Size</key>
-								<integer>59019</integer>
+								<integer>58874</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
