--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,8 +84,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Rs+6NxIAkpgO
-								4T0NE5n6ZA==
+								wYslc6YZZu39
+								TsvD/S1Xuw==
 								</data>
 								<key>Size</key>
 								<integer>122009</integer>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ztPjOS+kDRtZ
-								ve7gCMDsKg==
+								AU8StwuVrSJP
+								D2oDLu7nlQ==
 								</data>
 								<key>Size</key>
-								<integer>49911</integer>
+								<integer>49766</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
