--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,8 +84,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iRgNPb0XEF34
-								AQJQvHNo0Q==
+								hALOLYJdbiJG
+								XmQG1HCdaQ==
 								</data>
 								<key>Size</key>
 								<integer>113934</integer>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ezbpbeZNzJaI
-								Y8urUYd0Zg==
+								C858xwSNGv0x
+								lFiaQtAXzg==
 								</data>
 								<key>Size</key>
-								<integer>47384</integer>
+								<integer>47239</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
