--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -124,8 +124,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DFkF9QKmTzBj
-								JMULZwleJw==
+								LYe/IYOTN2Eu
+								FrinkVAEpg==
 								</data>
 								<key>Size</key>
 								<integer>137845</integer>
@@ -144,11 +144,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/pbOA38DAXBv
-								NcgH1MPyZA==
+								rniFVQbWmxfo
+								AO+90RCgtA==
 								</data>
 								<key>Size</key>
-								<integer>67338</integer>
+								<integer>67193</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
