--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,8 +94,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G5796rEayNF2
-								rqP6wvfApw==
+								ApAmNLiFtbVm
+								jDX7VJ/jog==
 								</data>
 								<key>Size</key>
 								<integer>114894</integer>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZAyDpFekz8+5
-								Y7452WVpmQ==
+								1k6kl7exLcEZ
+								l6Jf48tOQw==
 								</data>
 								<key>Size</key>
-								<integer>46669</integer>
+								<integer>46524</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
