--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:17:51Z</date>
+						<date>2019-01-25T19:31:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ltDh4/hIOYvu
-								WlwnlsgsYA==
+								fzyivnpB1Isb
+								SBm46sDtPw==
 								</data>
 								<key>Size</key>
-								<integer>145929</integer>
+								<integer>146012</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/E5hdvOp2wPs
-								xll3ogor1g==
+								53n5m9BBJdTd
+								eDIsXI3C6A==
 								</data>
 								<key>Size</key>
-								<integer>79957</integer>
+								<integer>79880</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
