--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/Contents.plist
@@ -20,6 +20,7 @@
 				<string>5-NetSci-Speakers</string>
 				<string>6-NetSci-Sponsors</string>
 				<string>7-NetSci-Organizers</string>
+				<string>8-Skratch</string>
 			</array>
 		</dict>
 	</array>
