--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -10,15 +10,15 @@
 			<key>Dictionary</key>
 			<dict>
 				<key>BrowserTitle</key>
-				<string>NetSci Schedule</string>
+				<string>Skratch</string>
 				<key>CreatedDate</key>
 				<date>2016-02-08T13:45:29Z</date>
 				<key>ID</key>
-				<string>page55</string>
+				<string>page37</string>
 				<key>MostRecentlySelectedStyleName</key>
 				<string>Theme Default</string>
 				<key>PageTitle</key>
-				<string>NetSci Schedule</string>
+				<string>Skratch</string>
 				<key>PluginClassName</key>
 				<string>YHStacksPlugin</string>
 				<key>PluginMetadata</key>
@@ -35,12 +35,12 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-28T20:42:16Z</date>
+						<date>2019-01-28T20:40:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_pp113009_n18_n1.jpg</key>
+							<key>files/backgroundImage_pp111153_n18_n1.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -60,16 +60,6 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-127916a.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								3LgVp1RAakvu
-								6pxIT/gAjg==
-								</data>
-								<key>Size</key>
-								<integer>530208</integer>
-							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -79,16 +69,6 @@
 								</data>
 								<key>Size</key>
 								<integer>13322</integer>
-							</dict>
-							<key>files/stacks-image-843a067.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gvLJWD1G+M0Z
-								v6+xt5Bueg==
-								</data>
-								<key>Size</key>
-								<integer>239632</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
@@ -100,52 +80,22 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
-							<key>files/stacks-image-eb41103.png</key>
+							<key>files/stacks_page_page37.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TtBSlYnCR35b
-								mXgxzoVV0g==
+								qHWjhWM1Lbdk
+								eSf6HqZGTQ==
 								</data>
 								<key>Size</key>
-								<integer>511231</integer>
+								<integer>195994</integer>
 							</dict>
-							<key>files/stacks-image-f39249a-1200x900.jpg</key>
+							<key>files/stacks_page_page37.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								uQPBzkerZ3yf
-								AKih3wOo4A==
-								</data>
-								<key>Size</key>
-								<integer>275910</integer>
-							</dict>
-							<key>files/stacks-image-f39249a-1200x900@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								1XUEj5zX7klL
-								ueUBkeYxJA==
-								</data>
-								<key>Size</key>
-								<integer>421454</integer>
-							</dict>
-							<key>files/stacks_page_page55.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								1xe1xvsO+htc
-								CXcYR8CvJQ==
-								</data>
-								<key>Size</key>
-								<integer>145400</integer>
-							</dict>
-							<key>files/stacks_page_page55.js</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								yiFbDdZFo8sR
-								+6yJelIOrQ==
+								gmaAuBE1nYTT
+								ZP9VeBcMIA==
 								</data>
 								<key>Size</key>
 								<integer>24751</integer>
@@ -154,17 +104,17 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jk1D2snobRBV
-								PB6lukQmkg==
+								stHzomuPiq/T
+								0f4Vz6MQBg==
 								</data>
 								<key>Size</key>
-								<integer>69617</integer>
+								<integer>95333</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
-						<string>page55</string>
+						<string>page37</string>
 						<key>SiteRoot</key>
-						<string>events/netsci/schedule</string>
+						<string>events/netsci/page-3</string>
 						<key>Version</key>
 						<integer>3</integer>
 					</dict>
