--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-28T20:40:10Z</date>
+						<date>2019-01-29T16:42:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,31 +84,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qHWjhWM1Lbdk
-								eSf6HqZGTQ==
+								E07kFWL3r42l
+								keYPe1IclQ==
 								</data>
 								<key>Size</key>
-								<integer>195994</integer>
+								<integer>224265</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								gmaAuBE1nYTT
-								ZP9VeBcMIA==
+								g5wZFTXEWPm9
+								icH0BkbuEQ==
 								</data>
 								<key>Size</key>
-								<integer>24751</integer>
+								<integer>27845</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								stHzomuPiq/T
-								0f4Vz6MQBg==
+								iOGUW8X26d8e
+								G7eERoqajQ==
 								</data>
 								<key>Size</key>
-								<integer>95333</integer>
+								<integer>137529</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
