--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-28T20:42:16Z</date>
+						<date>2019-01-29T15:59:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -60,6 +60,16 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
+							<key>files/stacks-image-012ccd0-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								XsvJYylntJyu
+								SBVPvLHXuw==
+								</data>
+								<key>Size</key>
+								<integer>38805</integer>
+							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
 								<key>Digest</key>
@@ -70,6 +80,36 @@
 								<key>Size</key>
 								<integer>530208</integer>
 							</dict>
+							<key>files/stacks-image-1500267-332x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								/1yJEGVtgDYC
+								qJpjqOOqSg==
+								</data>
+								<key>Size</key>
+								<integer>37050</integer>
+							</dict>
+							<key>files/stacks-image-1500267-332x498@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5HaFH1+IeZ2q
+								+imybGmwWQ==
+								</data>
+								<key>Size</key>
+								<integer>61496</integer>
+							</dict>
+							<key>files/stacks-image-3179185-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								F9b2GlY9B0E6
+								KtfJt7YGVg==
+								</data>
+								<key>Size</key>
+								<integer>28413</integer>
+							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -79,6 +119,46 @@
 								</data>
 								<key>Size</key>
 								<integer>13322</integer>
+							</dict>
+							<key>files/stacks-image-78f98c2-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								VQeylHByJYMt
+								eHl8ZH4K0Q==
+								</data>
+								<key>Size</key>
+								<integer>40200</integer>
+							</dict>
+							<key>files/stacks-image-78f98c2-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ayixwrm11vSB
+								j4hesfTjNw==
+								</data>
+								<key>Size</key>
+								<integer>66232</integer>
+							</dict>
+							<key>files/stacks-image-7bc5484-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SOlRP1yO0rWu
+								gZ/HtPG+rw==
+								</data>
+								<key>Size</key>
+								<integer>36199</integer>
+							</dict>
+							<key>files/stacks-image-7bc5484-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								TL7yNXylaDtA
+								Ftz2qb0T9g==
+								</data>
+								<key>Size</key>
+								<integer>61533</integer>
 							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
@@ -99,6 +179,26 @@
 								</data>
 								<key>Size</key>
 								<integer>21714</integer>
+							</dict>
+							<key>files/stacks-image-e5e8064-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								4+MD2lluE/v8
+								P3P4cYsfGg==
+								</data>
+								<key>Size</key>
+								<integer>30647</integer>
+							</dict>
+							<key>files/stacks-image-e5e8064-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JyszyP6C4FQg
+								UIxslUmduw==
+								</data>
+								<key>Size</key>
+								<integer>48100</integer>
 							</dict>
 							<key>files/stacks-image-eb41103.png</key>
 							<dict>
@@ -134,31 +234,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1xe1xvsO+htc
-								CXcYR8CvJQ==
+								kITO5Izi7x1a
+								TVTXCalZew==
 								</data>
 								<key>Size</key>
-								<integer>145400</integer>
+								<integer>168847</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yiFbDdZFo8sR
-								+6yJelIOrQ==
+								+Lxc2vamtSl1
+								fjU9ZfJgSw==
 								</data>
 								<key>Size</key>
-								<integer>24751</integer>
+								<integer>26207</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jk1D2snobRBV
-								PB6lukQmkg==
+								kRLeF25VUE3H
+								mnnySJutJg==
 								</data>
 								<key>Size</key>
-								<integer>69617</integer>
+								<integer>99302</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
